# project_templates

./: .gitignore  README.md
cmake_project/simple_template/src/: CMakeLists.txt  main.cpp
embedded/arduino_atmelstudio/: README.md
embedded/arduino_atmelstudio/AutomaticCooker/AutomaticCooker/Debug/: AutomaticCooker.elf  AutomaticCooker.hex  AutomaticCooker.lss  AutomaticCooker.srec  makedep.mk
embedded/arduino_atmelstudio/AutomaticCooker/AutomaticCooker/Debug/ArduinoLibraries/: SPI.d
embedded/arduino_atmelstudio/AutomaticCooker/AutomaticCooker/Hardware/: cooker_hal.cpp  cooker_hal.h  cooker_hardware.cpp  cooker_hardware.h
general/cmake_project/cmake_opencv/: CMakeLists.txt
general/cmake_project/cmake_opencv/src/: CMakeLists.txt
general/cmake_project/simple_template/: CMakeLists.txt
linux/cmake_project/cmake_cpp_module/: CMakeLists.txt
linux/cmake_project/cmake_cpp_module/include/cmake_cpp_module/: template.hpp
linux/cmake_project/cmake_cpp_module/src/: template.cpp
linux/cmake_project/cmake_cpp_module/tests/: CMakeLists.txt  python_test.cpp
linux/cmake_project/cmake_cpp_project/: CMakeLists.txt  README.md
linux/cmake_project/cmake_cpp_project/examples/: CMakeLists.txt
linux/cmake_project/cmake_cpp_project/gtests/: CMakeLists.txt  graph_unittest.cpp
linux/cmake_project/cmake_cpp_project/libraries/: CMakeLists.txt
linux/cmake_project/cmake_cpp_project/module/: CMakeLists.txt
linux/cmake_project/cmake_cpp_project/module/tests/: CMakeLists.txt
linux/cmake_project/cmake_cpp_subproject/tests/: CMakeLists.txt
linux/cmake_project/simple_cmake/: CMakeLists.txt
linux/cmake_project/simple_cmake/src/: CMakeLists.txt  hello.h
mcu/arduino_atmelstudio/AutomaticCooker/: AutomaticCooker.atsln  AutomaticCooker.atsuo
mcu/arduino_atmelstudio/AutomaticCooker/AutomaticCooker/: AutomaticCooker.cppproj  cooker_common.h  main.cpp
mcu/arduino_atmelstudio/AutomaticCooker/AutomaticCooker/Debug/: AutomaticCooker.map  cooker_main.d  main.d
mcu/arduino_atmelstudio/AutomaticCooker/AutomaticCooker/Debug/Hardware/: cooker_hal.d  cooker_hardware.d
mcu/arm9_gcc_template/project/src/arm9/: arm9.mk
mcu/arm9_gcc_template/project/src/arm9/driver/: BK_Scheduler.c  icu_drv.c  types.h
mcu/arm9_gcc_template/project/src/arm9/system/: startup.s
mcu/arm9_gcc_template/project/src/libraries/: version.md
mcu/deprecated/arm9_gcc_template/: README.md
mcu/deprecated/arm9_gcc_template/project/: Makefile
mcu/freertos_makefile/src/libraries/FreeRTOS/: freertos.mk
mcu/freertos_makefile/src/libraries/RTT/: rtt.mk
mcu/freertos_makefile/src/modules/debug/: mod_debug.mk
mcu/freertos_makefile/src/racerio/: racerio.mk
mcu/freertos_makefile/src/racerio/config/: FreeRTOSConfig.h
mcu/freertos_makefile/src/racerio/user/: main.c  platform.c  platform.h
mcu/stm32_gcc_project/project/: Makefile
mcu/stm32_gcc_project/project/src/demo/: jlink-flash.jlink  main.c
mcu/stm32_gcc_project/project/src/libraries/STM32F4xx_StdPeriph_Driver/: stm32f4_stdperiph.mk
mcu/stm32_gcc_project/project/src/racer_core/: jlink-flash.jlink  main.c  racer_core.mk
mcu/stm32_gcc_project/project/src/racer_core/driver/: racerio_can.c
mcu/stm32_gcc_template/: README.md
mcu/stm32_gcc_template/project/src/demo/driver/: racerio_timer.h
mcu/stm32_gcc_template/project/src/libraries/STM32F4xx_StdPeriph_Driver/: stm32f4_stdperiph.mk
mcu/stm32_gcc_ws/: README.md
mcu/stm32_gcc_ws/workspace/: Makefile
mcu/stm32_gcc_ws/workspace/make/config/stm32f1/: cmsis.mk
mcu/stm32_gcc_ws/workspace/make/config/stm32f4/: chibios.mk
mcu/stm32_gcc_ws/workspace/src/libraries/: version.md
mcu/stm32_ws/make/: firmware-common.mk  firmware-defs.mk
mcu/stm32_ws/make/config/stm32f1/: device.mk
mcu/stm32_ws/make/config/stm32f4/: cmsis.mk  device.mk  freertos.mk  stdperiph.mk
mcu/stm32_ws/src/modules/debug/: debug_usart.h  debug_with_usart.c  debug_with_usart.h  rtt_debug.h
mcu/stm32_ws/src/modules/nrf24l01p/: nrf24l01x_reg.h
mcu/stm32_ws/src/modules/rtt/: jlink_rtt.c
mcu/stm32f1_makefile/User/: main.c
pc/cmake_project/cmake_project_cpp/: CMakeLists.txt
pc/cmake_project/cmake_project_cpp/src/: CMakeLists.txt  hello.cpp
stm32/arm9_gcc_template/project/src/arm9/: arm968_flash.ld  main.c
stm32/arm9_gcc_template/project/tools/: targets.mk
stm32/stm32_gcc_template/project/src/demo/: demo.mk
(+40 files in other folders)
